@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD pianobar-9999.ebuild 860 RMD160 dc279e4c418cd87b043ba39674963a11ce6d1d5a SHA1 4e9708bb1c3418b8b72dd940660403ac5496729c SHA256 4a91f473739580d16db3b1c1a6edfd68482530874f904bfe45b067b715aed13d
-MISC ChangeLog 649 RMD160 6590a7023361d4a5a7a49ea4c15e78b52e00e35c SHA1 acdc264ff54e2f3ea32d8928af69f83f147da596 SHA256 a4b30e83e1f2f4dbc94ae82555decdb64bea99991862044af9bea43aceb8329d
-MISC metadata.xml 371 RMD160 b3017b7e61c8fbf3491fcb0375e852109e0b2e40 SHA1 b375c9af40866894c275621baa6044c85713fe98 SHA256 e33f15538f27d6d3ee998404be1823ccbc930548dbc792badea6380042db3d99
+EBUILD pianobar-9999.ebuild 1057 RMD160 74f31f3acac3385875cf64f88eedabccbcd377b6 SHA1 8d394182775e6d40f1c42ba16d67f23329aa07db SHA256 00958bb7d6679da7ad1c7eb26664310aa51ff053b792d7c2f3276611f2b13cb7
+MISC ChangeLog 763 RMD160 d0a3427391f12447852745ae701d441a3cdb43ad SHA1 8363838d4bc3347b3cf81fb689cb61bb2041f6eb SHA256 ef22a8e7ad3e6e45018450517007bfdf60f47927ea092c44f27e7a08205b2cc6
+MISC metadata.xml 468 RMD160 0bc41c9e93734f4a64ad75772f8ca0427dfb76b2 SHA1 dc11398d39df273dd488ff3381aa667c1522a485 SHA256 bbf5847b9e0de8b266dea0d63053222fe7e387e2199da6efff13b40d9624a539
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iD8DBQFKlEhcQW+hXSf0t0IRAjNlAJ4/okkcTD3nh8OE2ADny8p1fyySqgCff4Nr
-lJFcLzCmleZis6tp8WjXzsI=
-=MTIu
+iD8DBQFM32BgQW+hXSf0t0IRAkvvAKDiwg/Kkvbd+vrrUlYalW9nUQV6UwCeLBgA
+ypQRURt/FrnXdywlQIiO0zY=
+=8O+P
 -----END PGP SIGNATURE-----
