@@ -9,5 +9,8 @@
 	<longdescription lang="en">
 	pianobar is a console client for the personalized web radio pandora.
 	</longdescription>
+    <use>
+        <flag name="faad">Use external faad library for AAC decoding</flag>
+    </use>
 </pkgmetadata>
 
